Test Org - Speridian/src/objects/ba_Quote_Request_Class__c.object
<CustomObject>
    <fields>
        <fullName>ba_ClassDescription__c</fullName>
        <label>Class Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ClassID__c</fullName>
        <label>Class ID</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ClassStatus__c</fullName>
        <label>Class Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EnrollableClass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollable Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ProbationaryPeriod__c</fullName>
        <label>Probationary Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOMF 60 Days</fullName>
                </value>
                <value>
                    <fullName>FOMF 90 Days</fullName>
                </value>
                <value>
                    <fullName>FOMF DOH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Request Class</relationshipLabel>
        <relationshipName>Quote_Request_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Waive_Probationary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Probationary Period For Open Enrol</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Request Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Request Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Request Class</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>